--- a/review/templates/base_generic.html
+++ b/review/templates/base_generic.html
@@ -64,7 +64,7 @@
                 </div>
             </section>
         {% endblock %}
-        <main role="main" class="container pageContent pt-50 pb-50" style="min-height: 70vh;">
+        <main role="main" class="pageContent pt-50 pb-50" style="min-height: 70vh;">
             {% block content %}{% endblock %}
         </main>
         <footer class="footer-area section-gap">
