--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -2,7 +2,7 @@
 {% block banner %}{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="row pt-70">
+<div class="row pt-70 container" style="margin: 0 auto;">
     <div class="col-md-3">
         <div class="username text-center">
             <img style="margin-bottom:15px;" src="{{ user.profile.image.url }}" alt="User Photo">
