--- a/review/templates/books/request.html
+++ b/review/templates/books/request.html
@@ -1,7 +1,8 @@
 {% extends "base_generic.html" %}
+{% block banner %}{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
-<form method="post" class="formsWidth">
+<form method="post" class="formsWidth pt-70 container">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Send Request</button>
