--- a/review/templates/header.html
+++ b/review/templates/header.html
@@ -7,7 +7,9 @@
         </div>
         <nav id="nav-menu-container">
             <ul class="nav-menu">
+              {% if user.is_authenticated %}
               <li><a href="{% url 'news-feed' %}"><img style="height:1.4em;" src="" alt=""> Home</a></li>
+              {% endif %}
               <li><a href="{% url 'books' %}"><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
               <!-- <li><a href=""> Language</a></li> -->
               {% if user.is_authenticated %}
@@ -27,20 +29,19 @@
               <li><a href="{% url 'login' %}"><img style="height:1.4em;" src="{% static 'icons/login.png' %}" alt=""> Login</a></li>
               <li><a href="{% url 'signup' %}"><img style="height:1.4em;" src="{% static 'icons/register.png' %}" alt=""> Register</a></li>
               {% endif %}
-              <li>
+              <li class="menu-has-children">
                 <form action="{% url 'change_language' %}" method="post">
                   {% csrf_token %}
-                  <select name="language">
+                  <select name="language" onchange="this.form.submit()">
                       {% get_current_language as LANGUAGE_CODE %}
                       {% get_available_languages as LANGUAGES %}
                       {% for lang in LANGUAGES %}
                           <option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %} selected="selected"{% endif %}>
-                              {{ lang.1 }} ({{ lang.0 }})
+                              {{ lang.1 }}
                           </option>
                       {% endfor %}
                   </select>
-                  <input type="submit" value="Select Language" />
-                </form>
+              </form>
               </li>
           </ul>
       </nav>
