done notifications follow, request

--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -12,7 +12,9 @@
             <div class="user-pad text-center">
                 <form action="{% url 'AddFollow' to_user.id%}" method='POST'>
                     {% csrf_token %}
-                    <button type="submit" id= "follow" class="btn btn-outline-success" name ="follow" > {% if is_followed %} UNFOLLOW {% else %} FOLLOW {% endif %} </button>
+                    <button type="submit" id= "follow" style="background-color: #34b1eb;"
+                     class="btn btn-secondary"name ="follow" > 
+                    {% if is_follower == 1 %} UNFOLLOW {% else %} FOLLOW {% endif %} </button>
                 </form>
             </div>
             <br>
