--- a/review/static/css/main.css
+++ b/review/static/css/main.css
@@ -2949,3 +2949,14 @@ h6 {
 .switch-wrap p {
   margin: 0;
 }
+ 
+.badge {
+	position: absolute;
+	top: 1px;
+	right: -4px;
+	padding: 1px 7px;
+	border-radius: 50%;
+	background: red;
+	color: white;
+	font-weight: bold;
+}
