--- a/review/templates/books/request.html
+++ b/review/templates/books/request.html
@@ -4,6 +4,7 @@
 <form method="post" class="formsWidth">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Send request</button>
+    <button type="submit" class="btn btn-success">Send Request</button>
 </form>
 {% endblock content %}
+
