--- a/review/templates/header.html
+++ b/review/templates/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <div class="container">
     <div class="row align-items-center justify-content-between d-flex">
       <div id="logo">
@@ -8,22 +9,40 @@
           <ul class="nav-menu">
               <li><a href=""><img style="height:1.4em;" src="" alt=""> Home</a></li>
               <li><a href="{% url 'books' %}"><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
-              <li><a href="{% url 'request' %}"><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Request</a></li>
-              <li><a href=""> Language</a></li>
-
+              <!-- <li><a href=""> Language</a></li> -->
               {% if user.is_authenticated %}
-              <li class="menu-has-children"><a href=""><img style="height:1.4em;" src="{% static 'icons/profile.png' %}" alt="">
+              <li class="menu-has-children"><a href="#"> <img style="height: 1.4em;" src="{% static 'icons/message.png' %}" alt="">Request</a>
+                <ul>
+                    <li><a href="{% url 'request' %}">New request</a></li>
+                    <li><a href="{% url 'list-request' %}">My request</a></li>
+                </ul>
+              </li>
+              <li><a href="{% url 'show-notifications' %}"><img style="height: 1.4em;" src="{% static 'icons/notification.jpg'%}" alt=""> Notification </a></li>
+              <li class="menu-has-children"><a href="{% url 'UserProfile' %}"><img style="height:1.4em;" src="{% static 'icons/profile.png' %}" alt="">
                   {{ user.username }}</a>
                   <ul>
                       <li><a href="{% url 'UserProfile' %}">My page</a></li>
                       <li><a href="">My Books</a></li>
                   </ul>
               </li>
+              <li><a href="{% url 'ListUsers' %}"><img style="height: 1.4em;" src="{% static 'icons/profile.png'%}" alt=""> Active Users </a></li>
               <li><a href="{% url 'logout' %}"><img style="height:1.4em;" src="{% static 'icons/logout.png' %}" alt=""> Logout</a></li>
               {% else %}
               <li><a href="{% url 'login' %}"><img style="height:1.4em;" src="{% static 'icons/login.png' %}" alt=""> Login</a></li>
               <li><a href="{% url 'signup' %}"><img style="height:1.4em;" src="{% static 'icons/register.png' %}" alt=""> Register</a></li>
               {% endif %}
+              <li><form action="{% url 'change_language' %}" method="post">
+                {% csrf_token %}
+                <select class="dropdown_item_select home_search_input " name="language">
+                {% get_available_languages as LANGUAGES %}
+                  {% for language in LANGUAGES %}
+                  <option value="{{ language.0 }}" {% if language.0 == LANGUAGE_CODE %} selected{% endif %}>
+                    {{ language.0|language_name_local }} ({{ language.0 }})
+                  </option>
+                  {% endfor %}
+                </select>
+                <input type="submit" class="btn btn-primary" value="{% trans 'Change language' %}">
+              </form></li>
           </ul>
       </nav>
     </div>
