See other user favorite books

--- a/users/templates/users/user_detail.html
+++ b/users/templates/users/user_detail.html
@@ -16,8 +16,8 @@
             <br>
             <br>
             <div>
-                <p><strong>Follower:</strong>{{user.follower.count}}</p>
-                <p><strong>Following:</strong>{{user.Following.count}}</p>
+                <p><strong>Follower: </strong>{{follower}}</p>
+                <p><strong>Following: </strong>{{following}}</p>
                 <p><strong>Email </strong>{{ user.email }}</p>
             </div>
         </div>
