--- a/review/templates/books/books.html
+++ b/review/templates/books/books.html
@@ -12,28 +12,32 @@
         </div>
         <div class="row" style="width: 100%;">
             {% for book in top_4_books %}
-            <div class=" col-lg-3 single-course item zoom">
-                <img class="img-fluid" style="width: 100%; height: 80%;" src="{{ book.image.url }}" alt="">
-                <p class="sale-btn">Book Detail</p>
-                <div class="details">
-                    <a href="{{ book.get_absolute_url }}"></a><h4>{{ book.title }} <span class="price float-right">{{ book.vote }}</span></h4></a>	
-                    <p>
-                        Author: {{ book.author }}
-                    </p>
+            <div class="col-md-3">
+                <a  href="{{ book.get_absolute_url }}">
+                <div class="single-course item zoom text-center" >
+                    <img class="img-fluid all_book_item" src="{{ book.image.url }}" alt="">
+                    <p class="sale-btn">Book Detail</p>
+                    <div class="details">
+                        <h4>{{ book.title }} <span class="price float-right">{{ book.vote }}</span></h4>
+                        <p>
+                            Author: {{ book.author }}
+                        </p>
+                        <div class="stars mt-2 mb-3" style="font-size: 20px;">
+                            {% if book.actual_rating %}
+                                {% for rate in book.actual_rating %}
+                                    <span class="fa fa-star checked" style="color : yellow"></span>
+                                {% endfor %}
+                                {% for rate in book.hidden_rating %}
+                                        <span class="fa fa-star" style="color : silver"></span>
+                                {% endfor %}
+                            {% else %}
+                                <h6>Nobody rated</h6>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
-                <div class="stars mt-2 mb-3" style="font-size: 20px;">
-                    {% if book.actual_rating %}
-                        {% for rate in book.actual_rating %}
-                            <span class="fa fa-star checked" style="color : yellow"></span>
-                        {% endfor %}
-                        {% for rate in book.hidden_rating %}
-                                <span class="fa fa-star" style="color : silver"></span>
-                        {% endfor %}
-                    {% else %}
-                        <h6>Nobody rated</h6>
-                    {% endif %}
+                </a>
                 </div>
-            </div>
             {% endfor %}
         </div>
     </div>	
@@ -48,14 +52,14 @@
             </div>
         </div>						
         <div class="row" style="width: 100%;">
-            <div class="active-course-carusel">
-                {% for book in book_list %}
+            {% for book in book_list %}
+                <div class="col-md-4" style="text-align: center;">
                 <a  href="{{ book.get_absolute_url }}">
                 <div class="single-course item zoom" >
                     <img class="img-fluid all_book_item" src="{{ book.image.url }}" alt="">
                     <p class="sale-btn">Book Detail</p>
                     <div class="details">
-                        <h4>{{ book.title }} <span class="price float-right">{{ book.vote }}</span></h4>	
+                        <h4>{{ book.title }} <span class="price float-right">{{ book.vote }}</span></h4>
                         <p>
                             Author: {{ book.author }}
                         </p>
@@ -74,9 +78,24 @@
                     </div>
                 </div>
                 </a>
-                {% endfor %}							
-            </div>											
+            </div>
+            {% endfor %}
         </div>
+    {% if is_paginated %}
+    <div class="pagination">
+        <span class="page-links">
+            {% if page_obj.has_previous %}
+                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+            <span class="page-current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+            {% if page_obj.has_next %}
+                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+            {% endif %}
+        </span>
+    </div>
+    {% endif %}
     </div>	
 </section>
 {% endblock %}
