--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% block content %}
+<div class="container">
     <div class="row pt-70">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -10,10 +11,23 @@
             <form method="post" class="formsWidth">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-success">Login</button>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success">Login</button>
+                </div>
             </form>
-            {% trans 'Create new user account:' %}  <a href="{% url 'signup' %}">Register here</a> <br>
-            {% trans 'Forgot your password?' %}  <a href="{% url 'password_reset' %}">Reset password</a>
+            <br>
+            <div class="text-center">
+                {% trans 'Create new user account:' %}  <a href="{% url 'signup' %}">Register here</a><br>
+                {% trans 'Forgot your password?' %}  <a href="{% url 'password_reset' %}">Reset password</a>
+            </div>
+            <br>
+            <div class="or-seperator text-center"><i>or</i></div>
+            <p class="text-center">Login with your social media account</p>
+            <div class="text-center social-btn">
+                <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-primary"><i class="fa fa-facebook"></i>&nbsp; Facebook</a>&nbsp
+                <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-danger"><i class="fa fa-google"></i>&nbsp; Google</a>&nbsp
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
