--- a/users/templates/registration/signup.html
+++ b/users/templates/registration/signup.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="container">
     <div class="row pt-70">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -10,9 +11,15 @@
             <form method="post" class="formsWidth">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-success">{% trans 'Register' %}</button>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success">{% trans 'Register' %}</button>
+                </div>
             </form>
-            {% trans 'Do you have a account' %} ? <a href="{% url 'login' %}">{% trans 'Click here to Login' %}</a>
+            <br>
+            <div class="text-center">
+                {% trans 'Do you have a account' %} ? <a href="{% url 'login' %}">{% trans 'Click here to Login' %}</a>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
